# RayTracingCuda

./: CMakeLists.txt  Makefile  app  camera.cpp  camera.h  cena.txt  esfera.cpp  esfera.h  esfera.ppm  forma.h  imagem.cpp  imagem.h  imagem.ppm  imagem2.ppm  imagem3.ppm  main.cpp  material.h  output_20230601_155523.ppm  raio.cpp  raio.h  registro.h  testes.7z  utils.h  vetor3.cpp  vetor3.h
Gerador/: RayCast  gerador.py  input.txt
resultados/: 1fonte de luz.ppm  Diversas fontes de luz.ppm  Reflexao e materiais.ppm  Sem antialiasing.ppm  cenaaleatoria300msaa.ppm
testes/: output_20230518_160651.ppm  output_20230518_161046.ppm  output_20230601_011633.ppm
